Fix name in bower

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-benchmark.js",
+  "name": "ng-benchmark",
   "version": "1.0.0",
   "authors": [
     "Robin Bressan <robin@buddey.net>"
